# EDrums

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  drums.ps1  tutorial.txt
Arduino_uno_midi_controller/: Arduino_uno_midi_controller.ino
Arduino_uno_midi_controller/src/Debouncer/: Debouncer.hpp
Arduino_uno_midi_controller/src/DrumController/: DrumController.hpp
Arduino_uno_midi_controller/src/DrumElement/: ContinuousDrumElement.cpp  ContinuousDrumElement.hpp
Arduino_uno_midi_controller/test/: TestDrumElement.cpp
Docs/: hihat_cases.txt
EDrumController/: CMakeLists.txt  EDrumController.ino
EDrumController/src/Debouncer/: Debouncer.cpp
EDrumController/src/DrumController/: DrumController.cpp  DrumController.hpp
EDrumController/src/DrumElement/: BinaryElement.cpp  BinaryElement.hpp  ContinuousDrumBinarizer.cpp  ContinuousDrumBinarizer.hpp  ContinuousDrumElement.cpp  ContinuousDrumElement.hpp  DrumElementInterface.hpp
EDrumController/src/Other/: Constants.hpp
EDrumController/src/Utils/: CalculationHelpers.hpp  Constants.hpp  Debouncer.hpp  FakeSerial.hpp  IIRFilter.hpp
EDrumController/test/: TestBinaryDrumElement.cpp  TestContinuousDrumBinarizer.cpp  TestContinuousDrumElement.cpp  TestDebouncer.cpp  TestDrumElement.cpp  TestFilter.cpp
EDrumController/test/helpers/: FakeSerial.cpp
ELightController/: Cargo.toml  memory.x
ELightController/.cargo/: config.toml
ELightController/src/: constants.rs  dmx.rs  main.rs  mapping.rs  midi.rs
RS_EDrumController/: Cargo.toml
RS_EDrumController/src/: constants.rs  drum_controller.rs  hal_adapter.rs  main.rs
RS_EDrumController/src/drum_element/: binary.rs  continuous.rs  continuous_binarizer.rs  mod.rs
RS_EDrumController/src/utils/: calculation_helpers.rs  debouncer.rs  iir_filter.rs
Scripts/: build.sh  drums.ps1
TestData/: 2FastHitsTests_TwoTimes_CymbalCrash_NoDelay.txt  2HitsTests_FourTimes_CymbalCrash_NoDelay.txt  2HitsTests_OneTime_CymbalCrash_NoDelay.txt  3hits_ManyTimes_CymbalCrash_NoDelay.txt  4HitsTests_OneTime_CymbalCrash_NoDelay.txt  5HitsTests_OneTime_CymbalCrash_NoDelay.txt  8FastHitsTests_OneTime_CymbalCrash_NoDelay.txt  8FastHitsTests_TwoTimes_CymbalCrash_1msDel.txt  8FastHitsTests_TwoTimes_CymbalCrash_1sDel.txt  8FastHitsTests_TwoTimes_TomDrum_1msDel.txt  Choke_2longtimes.txt  Choke_6times.txt  CoolTerm Capture 2022-02-26 11-50-45.txt  ManyDelicateHits.txt  ManyStrongHits.txt  TwoHitsTest_TwoTimes_CymbalCrash_1sDel.txt  TwoHitsTest_TwoTimes_TomDrum_1msDel.txt  TwoHitsTest_TwoTimes_TomDrum_1sDel.txt  dataVisualizer.py  tom2.txt  tom_9hits_NoDelay.txt  tom_lighterWithoutStick.txt  tom_withStick.txt  tomlighthits.txt
TestData/DataCollector/: DataCollector.ino
TestData/manualData/: hitPointsTests.txt
