[package]
name = "elight-controller"
version = "0.1.0"
edition = "2021"
default-run = "elight-controller"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
panic-halt = "1.0"
stm32f4xx-hal = { version = "0.23.0", features = ["stm32f446", "usb_fs"] }
synopsys-usb-otg = { version = "0.4", features = ["fs"] }
usb-device = "0.3"
usbd-midi = "0.3"
embedded-hal = "1.0"
nb = "1"
fugit = "0.3"

[profile.dev]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
